Add SmartWizard multi-step form to vendor registration
Integrated SmartWizard to split the vendor registration form into multiple steps for improved user experience. Added required assets, initialized the wizard with custom options, and updated Arabic translations for 'Next' and 'Previous' buttons.

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3141,6 +3141,8 @@
     "Try looking within the departments shown below.": "حاول البحث داخل الأقسام الموضحة أدناه.",
     "Download Our App": "حمل تطبيقنا",
     "IOS": "IOS",
+    "Next": "التالي",
+    "Previous": "السابق",
     "Be a seller": "سجّل منشأتك الصناعية",
     "My Account": "حسابي",
     "Logout": "تسجيل خروج",
