Enforce 9-digit phone validation for sellers
Updated seller phone validation to require exactly 9 digits starting with '5', reflecting new business rules. Adjusted validation rule and regex accordingly. Also includes updates to language files, assets, and vendor OTP view.

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3143,6 +3143,7 @@
     "IOS": "IOS",
     "Next": "التالي",
     "Previous": "السابق",
+    "Address Details": "تفاصيل العنوان",
     "Be a seller": "سجّل منشأتك الصناعية",
     "My Account": "حسابي",
     "Logout": "تسجيل خروج",
