--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -3669,6 +3669,7 @@
     "Poor": "Poor",
     "Fair": "Fair",
     "Good": "Good",
+    "Address Details": "Address Details",
     "Excellent": "Excellent",
     "WOW": "WOW",
     "Write Your Review": "Write Your Review",
