--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -492,18 +492,18 @@
     "Text Color": "لون الخط",
     "Alignment": "التوافق",
     "Direction": "اتجاه",
-    "Reviews": "المراجعات",
-    "Review": "إعادة النظر",
+    "Reviews": "التقييمات",
+    "Review": "تقييم",
     "Shop Now": "تسوق الآن",
-    "Stock Out": "المخزن نفذ",
-    "New Arrival": "قادم جديد",
+    "Stock Out": "غير متوفر",
+    "New Arrival": "أحدث المنتجات",
     "Featured": "متميز",
     "Top Rated": "أعلى التقييمات",
     "off": "إيقاف",
-    "Quick View": "نظرة سريعة",
+    "Quick View": "معاينة سريعة",
     "This section is only for developer. Please left this section if you do not have proper knowledge.": "هذا القسم للمطور فقط. يرجى ترك هذا القسم إذا لم تكن لديك المعرفة المناسبة.",
     "CSS": "CSS",
-    "JS": "شبيبة",
+    "JS": "JS",
     "Footer Logo": "تذييل الشعار",
     "Short Details": "تفاصيل مختصرة",
     "Payment Methods": "طرق الدفع",
@@ -1536,10 +1536,10 @@
     "Subscription purchase code": "كود شراء الاشتراك",
     "Subscription Invoice": "فاتورة الاشتراك",
     "Pay Now": "ادفع الآن",
-    "PDF": "بي دي إف",
+    "PDF": "PDF",
     "Web": "الويب",
     "Bill To": "مشروع قانون ل",
-    "Not Applicable": "غير قابل للتطبيق",
+    "Not Applicable": "غير مطبق",
     "Renewable": "قابل للتجديد",
     "Sub Total": "المجموع الفرعي",
     "Other discount": "خصم آخر",
@@ -3147,14 +3147,14 @@
     "Be a seller": "سجّل منشأتك الصناعية",
     "My Account": "حسابي",
     "Logout": "تسجيل خروج",
-    "No Account": "لا حساب",
+    "No Account": "لا يوجد حساب",
     "Register or login now": "سجل أو سجل الدخول الآن",
-    "Track Order": "ترتيب المسار",
+    "Track Order": "تتبع الطلب",
     "Type your product name..": "اكتب اسم المنتج الخاص بك ..",
     "Sorry, nothing found for": "عذرا، لم يتم العثور على شيء",
     "Popular Search": "البحث الشائع",
-    "Seller\/Vendor": "البائع\/البائع",
-    "Your Cart": "عربتك",
+    "Seller\/Vendor": "البائع\/المصنع",
+    "Your Cart": "عربة التسوق",
     "Shopping Cart": "عربة التسوق",
     "Your cart is empty": "عربة التسوق فارغة",
     "No items added in your cart. Please add product to your cart list.": "لا توجد عناصر مضافة في سلة التسوق الخاصة بك. الرجاء إضافة المنتج إلى قائمة عربة التسوق الخاصة بك.",
@@ -3289,30 +3289,30 @@
     "Browse files": "تصفح ملفات",
     "This product has no reviews.": "هذا المنتج لا يوجد تقييمات.",
     "Let others know what do you think and be the first to write a review.": "دع الآخرين يعرفون ما هو رأيك وكن أول من يكتب مراجعة.",
-    "Specification": "تخصيص",
-    "Sold By": "تم بيعها من قبل",
+    "Specification": "المواصفات",
+    "Sold By": "تم بيعه من قبل",
     "Go to Store": "اذهب إلى المتجر",
     "Send Message": "أرسل رسالة",
-    "Vendor Profile": "الملف الشخصي للبائع",
+    "Vendor Profile": "الملف الشخصي للمصنع",
     "Coustomer image": "صورة Coustomer",
-    "This seller did not receive any product reviews.": "لم يتلق هذا البائع أي تقييم للمنتج.",
-    "top Seller": "أعلى بائع",
-    "Seller Ratings": "تقييمات البائع",
+    "This seller did not receive any product reviews.": "لم يتلق هذا المصنع أي تقييم للمنتج.",
+    "top Seller": "أعلى مصنع",
+    "Seller Ratings": "تقييمات المصنع",
     "Chat Now": "الدردشة الآن",
     "Shop Image": "صورة المصنع",
-    "Vendor Image": "صورة البائع",
+    "Vendor Image": "صورة المصنع",
     "Have any query": "لديك أي استفسار",
     "Send us a message": "أرسل لنا رسالة",
     "Shipment on Time": "الشحن في الوقت المحدد",
-    "Seller’s Cancellation": "إلغاء البائع",
-    "Seller Rating": "تقييم البائع",
+    "Seller’s Cancellation": "إلغاء المصنع",
+    "Seller Rating": "تقييم المصنع",
     " Reviews": " المراجعات",
     " Rating": " تصنيف",
     "Vendor Resigtration": "إعادة تهجير البائعين",
     "Register now with few easy steps!": "سجل الآن بخطوات قليلة سهلة!",
     "Seller Registration Form": "نموذج تسجيل المصنع",
     "Enter Your :x": "أدخل :x الخاص بك",
-    "Vendor Address": "عنوان البائع",
+    "Vendor Address": "عنوان المصنع",
     "Country ": "دولة",
     "City ": "مدينة",
     "Shop Details": "تفاصيل المصنع",
@@ -3340,13 +3340,13 @@
     "Go to page :page": "انتقل إلى الصفحة: الصفحة",
     "Your productproduct price will be here.": "سيكون سعر المنتج الخاص بك هنا.",
     "Allowed File Extensions: jpg, png, gif, bmp and Maximum File Size :x MB": "إمتدادات الملفات المسموح بها: jpg، png، gif، bmp و الحجم الأقصى للملف: x MB",
-    "Vendor Login Activity": "نشاط تسجيل دخول البائع",
+    "Vendor Login Activity": "نشاط تسجيل دخول المصنع",
     "Is Public": "عام",
     "Show :x": "عرض: x",
     "item": "بند",
     "seller": "مصنع",
-    "Withdrawals History": "تاريخ الانسحابات",
-    "Withdrawal Setting": "إعداد الانسحاب",
+    "Withdrawals History": "تاريخ السحب",
+    "Withdrawal Setting": "إعداد السحب",
     "Money": "نقود",
     "Send withdrawal request": "إرسال طلب سحب",
     "No payment method found. Please contact with admin.": "لم يتم العثور على طريقة دفع. يرجى التواصل مع المسؤول.",
@@ -3882,6 +3882,7 @@
     "Seller Request Form": "نموذج طلب مصنع",
     "Saved for later, products you may love to buy now..": "تم الحفظ لوقت لاحق ، المنتجات التي قد تحب شرائها الآن ..",
     "All time": "كل الوقت",
+    "Buy Now": "شراء الآن",
     "Out of Stock": "إنتهى من المخزن",
     "All Availability": "كل التوفر",
     "Product name": "اسم المنتج",
