--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -2689,8 +2689,8 @@
     "Office": "مكتب",
     "Status history": "سجل الحالة",
     "Order status changed to :x by :y": "تم تغيير حالة الطلب إلى: x بواسطة: y",
-    "Track Code": "كود المسار",
-    "Track code": "كود المسار",
+    "Track Code": "رمز التتبع",
+    "Track code": "رمز التتبع",
     "Permission Roles": "أدوار الإذن",
     "Add Role": "أضف دورًا",
     "Generate Permissions": "توليد أذونات",
@@ -3273,10 +3273,10 @@
     "Order Track": "تتبع الطلب",
     "Have an order?": "هل لديك طلب؟",
     "Want to know where your order is now?": "هل تريد أن تعرف أين يوجد طلبك الآن؟",
-    "TRACK": "مسار",
+    "TRACK": "تتبع",
     "YOUR ORDER": "طلبك",
-    "Enter the track code of your order above and know the progress of your product delivery.": "أدخل رمز المسار لطلبك أعلاه وتعرف على التقدم المحرز في تسليم المنتج الخاص بك.",
-    "Order Reference": "ترتيب المرجعي",
+    "Enter the track code of your order above and know the progress of your product delivery.": "أدخل رمز التتبع لطلبك أعلاه وتعرف على التقدم المحرز في تسليم المنتج الخاص بك.",
+    "Order Reference": "مرجع الطلب",
     "For more details, :x": "لمزيد من التفاصيل: x",
     "please login to your account.": "يرجى تسجيل الدخول إلى حسابك.",
     "ORDER DATE": "تاريخ الطلب",
