--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -1954,7 +1954,7 @@
     "Password reset link sent to your :x.": "تم إرسال رابط إعادة تعيين كلمة المرور إلى :x الخاص بك.",
     "Please verify your email address or phone.": "يرجى التحقق من عنوان بريدك الإلكتروني أو هاتفك.",
     "Password reset link sent to your phone": "تم إرسال رابط إعادة تعيين كلمة المرور إلى هاتفك",
-    "Track code is invalid.": "رمز المسار غير صالح.",
+    "Track code is invalid.": "رمز التتبع غير صالح.",
     "Invalid order data.": "بيانات الطلب غير صالحة.",
     "The :x has been successfully submitted.": "تم إرسال x بنجاح.",
     "Vendor request": "طلب بائع",
