--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -3025,26 +3025,24 @@
     "Too many requests has given, try again later.": "تم تقديم عدد كبير جدًا من الطلبات ، حاول مرة أخرى لاحقًا.",
     "An error occurred processing your requests.": "حدث خطأ أثناء معالجة طلباتك.",
     "The server is currently unavailable": "الخادم غير متوفر حاليا",
-    "Back Home": "العودة إلى المنزل",
+    "Back Home": "الرئيسية",
     "Dead end": "نهاية",
     "This product is facing license validation issue. Please verify your purchase code from :x": "هذا المنتج يواجه مشكلة التحقق من صحة الترخيص. يرجى التحقق من رمز الشراء الخاص بك من: x",
     "Database Error": "خطأ في قاعدة البيانات",
     "Couldn't prepare the database": "تعذر تجهيز قاعدة البيانات",
     "Please contact your developer if you don't understand the error message.": "يرجى الاتصال بالمطور الخاص بك إذا كنت لا تفهم رسالة الخطأ.",
     "TRY AGAIN": "حاول ثانية",
-    "Databse Settings": "إعدادات Databse",
+    "Databse Settings": "إعدادات قاعدة البيانات",
     "If you dont know how to fill this form contact your hosting provider.": "إذا كنت لا تعرف كيفية ملء هذا النموذج ، فاتصل بمزود الاستضافة.",
-    "Databse Name": "اسم Databse",
-    "Database User": "مستخدم قاعدة البيانات",
-    "Database Password": "كلمة مرور قاعدة البيانات",
-    "Databse Port": "ميناء داتابس",
+    "Databse Name": "اسم قاعدة البيانات",
+    "Databse Port": "منفذ قاعدة البيانات",
     "Host name (should be 'localhost": "اسم المضيف (يجب أن يكون 'localhost",
     "BACK": "خلف",
     "CREATE DATABASE": "إنشاء قاعدة بيانات",
-    "Installing the database...": "جاري تثبيت قاعدة البيانات ...",
+    "Installing the database...": "جاري إنشاء قاعدة البيانات ...",
     "OOPS": "أُووبس",
     "Please verify your purchase code and username.": "يرجى التحقق من رمز الشراء واسم المستخدم.",
-    "Verify Purchase Code": "تحقق من رمز الشراء",
+    "Verify Purchase Code": "تحقق من كود الشراء",
     "send": "يرسل",
     "There is a server maintenance going on. We are hoping for your co-operation.": "هناك صيانة الخادم جارية. نأمل في تعاونكم.",
     "Your application has been successfully installed.": "تم تثبيت التطبيق الخاص بك بنجاح.",
