--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -858,7 +858,7 @@
     "Edit this submission": "تحرير هذا الإرسال",
     "Submit your entry for :x": "أرسل إدخالك لـ: x",
     "Your entry for ": "دخولك إلى",
-    "Return Home": "العودة للمنزل",
+    "Return Home": "الرئيسية",
     "Form Submissions": "عمليات إرسال النموذج",
     "All Forms": "جميع أشكال",
     "Back To Submissions": "العودة إلى التقديمات",
@@ -1188,7 +1188,7 @@
     "The :? has been successfully deleted.": "ال :؟ تم حذفه بنجاح.",
     "Targeting": "الاستهداف",
     "Display": "عرض",
-    "Home": "بيت",
+    "Home": "الرئيسية",
     "Product Details": "تفاصيل المنتج",
     "Cart": "عربة التسوق",
     "Checkout": "الدفع",
@@ -2057,9 +2057,9 @@
     "The separator field is required.": "مطلوب حقل الفاصل.",
     "Most Popular": "الأكثر شهرة",
     "Featured Products": "منتجات مميزة",
-    "New Arrivals": "القادمون الجدد",
-    "Flash Sales": "مبيعات فلاش",
-    "Custom Filter": "تصفية مخصص",
+    "New Arrivals": "أحدث المنتجات",
+    "Flash Sales": "مبيعات سريعة",
+    "Custom Filter": "فلتر مخصص",
     "Your wallet balance is low.": "رصيد محفظتك منخفض.",
     "Withdrawal request send successfully.": "تم إرسال طلب السحب بنجاح.",
     "Gender must be either Male or Female": "يجب أن يكون الجنس ذكرًا أو أنثى",
@@ -3074,7 +3074,7 @@
     "Blog post are not available": "وظيفة المدونة غير متوفرة",
     "Share on": "مشاركه فى",
     "Previous Post": "المنشور السابق",
-    "Next Post": "القادم بوست",
+    "Next Post": "المنشور التالي",
     "Related posts": "المنشورات ذات الصلة",
     "Select the items you want to buy": "حدد العناصر التي تريد شراءها",
     "Select All": "اختر الكل",
