--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -187,13 +187,13 @@
     "Disabling this will not record a commission if an affiliate uses their own referral link\/coupons during orders)": "لن يؤدي تعطيل هذا إلى تسجيل عمولة إذا استخدم أحد الشركاء رابط الإحالة\/القسائم الخاصة به أثناء الطلبات)",
     "Send referral details to admin": "إرسال تفاصيل الإحالة إلى المسؤول",
     "Disabling this will not include affiliate referral details in the email to admin.": "لن يؤدي تعطيل هذا إلى تضمين تفاصيل الإحالة التابعة في البريد الإلكتروني المرسل إلى المسؤول.",
-    "Save": "يحفظ",
+    "Save": "حفظ",
     "Affiliate Users": "المستخدمون التابعون",
     "Customers": "عملاء",
     "Users": "المستخدمون",
-    "Batch Delete": "حذف دفعة",
-    "Filter": "منقي",
-    "All Status": "كل الحالة",
+    "Batch Delete": "حذف مجموعة",
+    "Filter": "فلتر",
+    "All Status": "كل الحالات",
     "Pending": "قيد الانتظار",
     "All Tag": "جميع العلامات",
     "Multi Tier": "متعدد المستويات",
@@ -224,7 +224,7 @@
     "Visit Site": "تفضل بزيارة الموقع",
     "Customer Panel": "لوحة العملاء",
     "Admin Panel": "لوحة الادارة",
-    "Vendor Panel": "لوحة البائع",
+    "Vendor Panel": "لوحة المصنع",
     "Select Language": "اختار اللغة",
     "Sign Out": "خروج",
     "Admin": "مسؤل",
@@ -666,7 +666,7 @@
     "Allow free shipping": "السماح بالشحن المجاني",
     "Check this box if the coupon grants free shipping. A free shipping method must be enabled in your shipping zone and be set to require 'a valid free shipping coupon": "حدد هذا المربع إذا كانت القسيمة تمنح شحنًا مجانيًا. يجب تمكين طريقة الشحن المجاني في منطقة الشحن الخاصة بك وتعيينها بحيث تتطلب ';قسيمة شحن مجانية صالحة';",
     "Expired": "منتهي الصلاحية",
-    "Vendor": "بائع",
+    "Vendor": "مصنع",
     "Products": "منتجات",
     "Minimum Spend": "الحد الأدنى للإنفاق",
     "You must spend more than or equal this amount to get coupon discount.": "يجب أن تنفق أكثر من أو يساوي هذا المبلغ للحصول على خصم القسيمة.",
@@ -983,7 +983,7 @@
     "Select State": "اختر ولايه",
     ":x is not available.": ": x غير متوفر.",
     "Select Country": "حدد الدولة",
-    "Please select & save vendor before save variations.": "يرجى تحديد البائع وحفظه قبل حفظ الاختلافات.",
+    "Please select & save vendor before save variations.": "يرجى تحديد البائع وحفظه قبل حفظ المواصفات.",
     "Vendor stock will show here for each location.": "سيتم عرض مخزون البائع هنا لكل موقع.",
     "Adjust By": "تعديل بواسطة",
     "New": "جديد",
@@ -1305,7 +1305,7 @@
     "Product Count": "عدد المنتجات",
     "Subtotal": "المجموع الفرعي",
     "Shipping Methods": "طرق الشحن",
-    "Vendor Name": "اسم البائع",
+    "Vendor Name": "اسم المصنع",
     "Total Order": "من أجل الكاملة",
     "Keyword": "الكلمة الرئيسية",
     "Hits": "يضرب",
@@ -1785,7 +1785,7 @@
     "Mark As Read": "وضع علامة كمقروءة",
     "Notification": "إشعار",
     "Channel": "قناة",
-    "Vendors": "الباعة",
+    "Vendors": "المصانع",
     "Duplicate": "ينسخ",
     "Category|Brand": "الفئة|العلامة التجارية",
     "Comments": "تعليقات",
