--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -3774,14 +3774,14 @@
     "No review found!": "No review found!",
     "We're sorry!": "We're sorry!",
     "You haven't reviewed any product yet.": "You haven't reviewed any product yet.",
-    "Vendor Profile": "Vendor Profile",
+    "Vendor Profile": "Manufacturer Profile",
     "Coustomer image": "Coustomer image",
     "This seller did not receive any product reviews.": "This seller did not receive any product reviews.",
     "top Seller": "top Seller",
     "Seller Ratings": "Seller Ratings",
     "Chat Now": "Chat Now",
     "Shop Image": "Shop Image",
-    "Vendor Image": "Vendor Image",
+    "Vendor Image": "Manufacturer Image",
     "Have any query": "Have any query",
     "Send us a message": "Send us a message",
     "Shipment on Time": "Shipment on Time",
@@ -3816,7 +3816,7 @@
     "Once deleted, every information and files will be lost forever.": "Once deleted, every information and files will be lost forever.",
     "Enter password to delete your account.": "Enter password to delete your account.",
     "Currently on": "Currently on",
-    "Vendor Resigtration": "Vendor Resigtration",
+    "Vendor Resigtration": "Manufacturer Resigtration",
     "Passwors must be at least :x characters. Contain uppercase and lowercase letters, numbers and special characters.": "Passwors must be at least :x characters. Contain uppercase and lowercase letters, numbers and special characters.",
     "Seller Request Form": "Seller Request Form",
     "Saved for later, products you may love to buy now..": "Saved for later, products you may love to buy now..",
