--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -557,8 +557,8 @@
     "Delete Layout": "حذف التخطيط",
     "Setting": "ضبط",
     "Add New Layout": "أضف تخطيط جديد",
-    "Show Add to Cart": "إظهار أضف إلى عربة التسوق",
-    "Show Wishlist": "إظهار قائمة الرغبات",
+    "Show Add to Cart": "إظهار إضافة للسلة",
+    "Show Wishlist": "إظهار قائمة المفضلة",
     "Show Quick View": "عرض نظرة سريعة",
     "Show Review": "عرض مراجعة",
     "Show Price": "عرض السعر",
@@ -2252,17 +2252,17 @@
     "Please select some product options before adding this product to your cart.": "الرجاء تحديد بعض خيارات المنتج قبل إضافة هذا المنتج إلى سلة التسوق الخاصة بك.",
     "Please select a product first!": "الرجاء تحديد منتج أولا!",
     "Proceed to Checkout": "باشرالخروج من الفندق",
-    "Add to Cart": "أضف إلى السلة",
+    "Add to Cart": "إضافة للسلة",
     "All product": "كل المنتجات",
-    "has been added to cart.": "تمت إضافته إلى عربة التسوق.",
-    "View Cart": "عرض عربة التسوق",
-    "Go to Checkout": "اذهب إلى Checkout",
+    "has been added to cart.": "تمت إضافته إلى السلة.",
+    "View Cart": "عرض السلة",
+    "Go to Checkout": "اذهب إلى الدفع",
     "Clear All": "امسح الكل",
     "Empty!": "فارغة!",
     "Congrats you are eligible for this coupon in this order.": "تهانينا ، أنت مؤهل للحصول على هذه القسيمة بهذا الطلب.",
     "Click to delete the coupon.": "انقر لحذف القسيمة.",
     "Default address not found! Please create a address & make it default": "العنوان الافتراضي غير موجود! يرجى إنشاء عنوان وجعله افتراضيًا",
-    "Make Payment": "قم بالدفع",
+    "Make Payment": "إدفع",
     "Good Morning": "صباح الخير",
     "Good Noon": "ظهر جيد",
     "Good Afternoon": "طاب مسائك",
@@ -3094,8 +3094,8 @@
     "Rating & Reviews": "التقييم والمراجعات",
     "Not reviewed yet": "لم تتم مراجعته بعد",
     "In wishlist": "في قائمة الرغبات",
-    "Add to cart": "أضف إلى السلة",
-    "In cart": "في العربة",
+    "Add to cart": "إضافة للسلة",
+    "In cart": "في السلة",
     "There are no products added for comparison yet.": "لا توجد منتجات مضافة للمقارنة حتى الان.",
     "To compare products": "لمقارنة المنتجات",
     "click on the button on the product page": "انقر فوق الزر الموجود في صفحة المنتج",
