--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -56,7 +56,7 @@
     "Customer": "عميل",
     "Medium": "واسطة",
     "Product": "المنتج",
-    "Quantity": "كمية",
+    "Quantity": "الكمية",
     "Sales": "مبيعات",
     "Amount": "مقدار",
     "Created At": "أنشئت في",
