--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -33,7 +33,7 @@
     "Delete": "حذف",
     "version": "إصدار",
     "Are you sure to delete this?": "هل أنت متأكد من حذف هذا؟",
-    "Close": "قريب",
+    "Close": "إغلاق",
     "Yes, Confirm": "نعم ، قم بالتأكيد",
     "image": "صورة",
     "View": "منظر",
@@ -499,7 +499,7 @@
     "New Arrival": "أحدث المنتجات",
     "Featured": "متميز",
     "Top Rated": "أعلى التقييمات",
-    "off": "إيقاف",
+    "off": "تخفيض",
     "Quick View": "معاينة سريعة",
     "This section is only for developer. Please left this section if you do not have proper knowledge.": "هذا القسم للمطور فقط. يرجى ترك هذا القسم إذا لم تكن لديك المعرفة المناسبة.",
     "CSS": "CSS",
@@ -540,7 +540,7 @@
     "Show Searchbar": "إظهار شريط البحث",
     "Show Account Icon": "إظهار رمز الحساب",
     "Show wishlist": "عرض قائمة الرغبات",
-    "Show Cart": "عرض عربة التسوق",
+    "Show Cart": "عرض السلة",
     "Show Track Order": "عرض تتبع الطلب",
     "Show Top Header": "إظهار الرأس العلوي",
     "Show Phone No": "اعرض رقم الهاتف",
@@ -1190,7 +1190,7 @@
     "Display": "عرض",
     "Home": "الرئيسية",
     "Product Details": "تفاصيل المنتج",
-    "Cart": "عربة التسوق",
+    "Cart": "السلة",
     "Checkout": "الدفع",
     "Confirm Order": "أكد الطلب",
     "Color": "اللون",
@@ -1395,7 +1395,7 @@
     "Leave blank to apply to all areas.": "اتركه فارغا لتطبيقه على جميع المجالات.",
     "ZIP should be area zip code.": "يجب أن يكون الرمز البريدي للمنطقة هو الرمز البريدي.",
     "Zone => Free Shipping": "المنطقة => شحن مجاني",
-    "User can see the title when shpping is apply in cart section.": "يمكن للمستخدم رؤية العنوان عند تطبيق shpping في قسم عربة التسوق.",
+    "User can see the title when shpping is apply in cart section.": "يمكن للمستخدم رؤية العنوان عند تطبيق shpping في قسم السلى.",
     "Free Shipping require": "يتطلب الشحن المجاني",
     "Free shipping condition.": "حالة الشحن المجاني.",
     "User can see only active status shipping method in cart section.": "يمكن للمستخدم رؤية طريقة شحن الحالة النشطة فقط في قسم سلة التسوق.",
@@ -1838,7 +1838,7 @@
     "Action name required.": "اسم الإجراء مطلوب.",
     "Invalid data": "بيانات غير صالحة",
     "Address does not found.": "لم يتم العثور على العنوان.",
-    "Products added to cart successfully.": "تمت إضافة المنتجات إلى عربة التسوق بنجاح.",
+    "Products added to cart successfully.": "تمت إضافة المنتجات إلى السلى بنجاح.",
     "This product is facing license validation issue. Please contact admin to fix the issue.": "هذا المنتج يواجه مشكلة التحقق من صحة الترخيص. يرجى الاتصال بالمسؤول لإصلاح المشكلة.",
     "Order not found.": "الطلب غير موجود.",
     "Please select correct address.": "الرجاء تحديد العنوان الصحيح.",
@@ -1933,7 +1933,7 @@
     "Commission update failed.": "فشل تحديث اللجنة.",
     "Product setting": "إعداد المنتج",
     "You can not delete this :x.": "لا يمكنك حذف هذا: x.",
-    "Failed to added to cart! please try again.": "فشل الإضافة إلى عربة التسوق! حاول مرة اخرى.",
+    "Failed to added to cart! please try again.": "فشل الإضافة إلى السلى! حاول مرة اخرى.",
     "Failed to added in compare list! try again.": "فشل الإضافة في قائمة المقارنة! حاول مرة أخرى.",
     "Product successfully added in compare list.": "تمت إضافة المنتج بنجاح في قائمة المقارنة.",
     "Already added. Try another one.": "تم الاضافة مسبقا. جرب واحدة أخرى.",
@@ -2165,7 +2165,7 @@
     "Email can not be sent, please contact with admin.": "لا يمكن إرسال البريد الإلكتروني ، يرجى التواصل مع المسؤول.",
     "Download expiry": "انتهاء صلاحية التنزيلات",
     "Vendor email not found.": "لم يتم العثور على البريد الإلكتروني للبائع.",
-    "Failed to added to cart! try again.": "فشل الإضافة إلى عربة التسوق! حاول مرة أخرى.",
+    "Failed to added to cart! try again.": "فشل الإضافة إلى السلى! حاول مرة أخرى.",
     "Stock is not available.": "المخزون غير متوفر.",
     "Product successfully added to your cart.": "تمت إضافة المنتج بنجاح إلى سلة التسوق الخاصة بك.",
     "Saved Successfully.": "حفظ بنجاح.",
@@ -3102,7 +3102,7 @@
     "A revolution in the e-commerce industry since year.": "ثورة في صناعة التجارة الإلكترونية منذ عام.",
     "The best online shopping experience.": "أفضل تجربة تسوق عبر الإنترنت.",
     "We know you love coupons and that’s why we always come up with various offers, events and vouchers, to make your shopping experience much more exciting.": "نحن نعلم أنك تحب الكوبونات ولهذا السبب نأتي دائمًا بالعروض والأحداث والقسائم المختلفة ، لجعل تجربة التسوق الخاصة بك أكثر إثارة.",
-    "Copy the coupon codes and use it on the cart page before checkout out.": "انسخ أكواد القسيمة واستخدمها على صفحة عربة التسوق قبل الخروج.",
+    "Copy the coupon codes and use it on the cart page before checkout out.": "انسخ أكواد القسيمة واستخدمها على صفحة السلى قبل الخروج.",
     "gifts": "الهدايا",
     "Exclusive offers for": "عروض حصرية لـ",
     "Our customers": "عملائنا",
@@ -3152,10 +3152,10 @@
     "Sorry, nothing found for": "عذرا، لم يتم العثور على شيء",
     "Popular Search": "البحث الشائع",
     "Seller\/Vendor": "البائع\/المصنع",
-    "Your Cart": "عربة التسوق",
-    "Shopping Cart": "عربة التسوق",
-    "Your cart is empty": "عربة التسوق فارغة",
-    "No items added in your cart. Please add product to your cart list.": "لا توجد عناصر مضافة في سلة التسوق الخاصة بك. الرجاء إضافة المنتج إلى قائمة عربة التسوق الخاصة بك.",
+    "Your Cart": "السلى",
+    "Shopping Cart": "السلى",
+    "Your cart is empty": "السلى فارغة",
+    "No items added in your cart. Please add product to your cart list.": "لا توجد عناصر مضافة في سلة التسوق الخاصة بك. الرجاء إضافة المنتج إلى قائمة السلى الخاصة بك.",
     "Sign Up": "اشتراك",
     "Use Phone Instead": "استخدم الهاتف بدلا من ذلك",
     "Use Email Instead": "استخدم البريد الإلكتروني بدلاً من ذلك",
@@ -3186,7 +3186,7 @@
     "Search your keyword": "ابحث في كلمتك الرئيسية",
     "popular post": "منشور مشهور",
     "Year": "عام",
-    "This is a grouped product. Add to your cart what you want.": "هذا منتج مجمع. أضف إلى عربة التسوق ما تريد.",
+    "This is a grouped product. Add to your cart what you want.": "هذا منتج مجمع. أضف إلى السلى ما تريد.",
     "Delivery Options": "خيارات التسليم",
     "Search your country": "ابحث في بلدك",
     "Search your state": "ابحث عن دولتك",
@@ -3215,7 +3215,7 @@
     "Product Reviews": "تعليقات المنتج",
     "All Star": "كل النجوم",
     "Star": "نجمة",
-    "More Products From Them": "المزيد من المنتجات منهم",
+    "More Products From Them": "المزيد من المنتجات",
     "Specifications of :x": "مواصفات: x",
     "Owner Name": "اسم المالك",
     "Visit Store": "قم بزيارة المعرض او المتجر",
@@ -3263,7 +3263,7 @@
     "Use the default address in the future.": "استخدم العنوان الافتراضي في المستقبل.",
     "Ship to a different address?": "هل تريد الشحن إلى عنوان مختلف؟",
     "Delivery Instructions": "تعليمات التوصيل",
-    "Back to Cart": "العودة إلى عربة التسوق",
+    "Back to Cart": "العودة إلى السلى",
     "Order Confirmation": "تأكيد الطلب",
     "Thank you. Your order has been received.": "شكرًا لك. تم استلام طلبك.",
     "Order Number": "رقم الأمر",
@@ -3811,7 +3811,7 @@
     "Here is what's happening with your profile today..": "إليك ما يحدث مع ملفك الشخصي اليوم ..",
     "Your Wishlist": "قائمة امنياتك",
     "Your Reviews": "تعليقاتك",
-    "Product in cart": "المنتج في عربة التسوق",
+    "Product in cart": "المنتج في السلى",
     "Last Orders": "الطلبات الأخيرة",
     "Invoice No": "رقم الفاتورة",
     "Order number": "رقم الأمر",
@@ -3880,7 +3880,7 @@
     "Seller Request Form": "نموذج طلب مصنع",
     "Saved for later, products you may love to buy now..": "تم الحفظ لوقت لاحق ، المنتجات التي قد تحب شرائها الآن ..",
     "All time": "كل الوقت",
-    "Buy Now": "شراء الآن",
+    "Buy Now": "اشتري الآن",
     "Out of Stock": "إنتهى من المخزن",
     "All Availability": "كل التوفر",
     "Product name": "اسم المنتج",
